package com.narxoz.rpg;

import com.narxoz.rpg.artifact.*;
import com.narxoz.rpg.combatant.Hero;
import com.narxoz.rpg.vault.ChronomancerEngine;
import com.narxoz.rpg.vault.VaultRunResult;

import java.util.List;

/**
 * Entry point for Homework 9 — Chronomancer's Vault: Visitor + Memento.
 *
 * The scaffold prints the banner only; students fill in the vault demo.
 */
public class Main {

    public static void main(String[] args) {
        System.out.println("=== Homework 9 Demo: Visitor + Memento ===");

        // 1. Create at least 2 heroes with different starting states.
        Hero alidar = new Hero("Alidar the Warrior", 100, 20, 15);
        Hero batyr = new Hero("Aiym the Mage", 70, 50, 10, 5, 100, new Inventory());

        // 2. Build an artifact inventory and exercise the visitor interface.
        alidar.getInventory().addArtifact(new Weapon("Rusty Sword", 10, 5, 2));
        batyr.getInventory().addArtifact(new Ring("Mana Ring", 150, 1, 10));

        System.out.println("--- Scanning Initial Inventories ---");
        ArtifactVisitor scanner = new EnchantmentScanner();
        alidar.getInventory().accept(scanner);
        batyr.getInventory().accept(scanner);

        // 3. Capture a hero snapshot through the memento workflow.
        // 4. Rewind the hero after a vault trap changes state.
        System.out.println("\n--- Testing Memento Rewind ---");
        var snapshot = alidar.createMemento();

        System.out.println("Before trap: " + alidar);
        alidar.takeDamage(90);
        System.out.println("After trap: " + alidar);

        alidar.restoreFromMemento(snapshot);
        System.out.println("After rewind: " + alidar);
        // 5. Run the ChronomancerEngine demo sequence.
        System.out.println("\n--- Starting Chronomancer Engine ---");
        ChronomancerEngine engine = new ChronomancerEngine();
        List<Hero> party = List.of(alidar, batyr);
        VaultRunResult result = engine.runVault(party);

        // 6. Print a final VaultRunResult summary.
        System.out.println("\n--- Final Vault Run Summary ---");
        System.out.println(result);

        // 4-ші Visitor-ды тексеру (Open/Closed Principle)
        System.out.println("\n--- Phase 8: Testing Open/Closed Behavior ---");
        ArtifactVisitor logger = new InventoryLogger();
        System.out.println("Logging Alidar's inventory:");
        alidar.getInventory().accept(logger);
    }
}
